# sol-smartcontract

./: AUDIT_CHANGE.md  Anchor.toml  README.md  eslint.config.mjs  package.json  tsconfig.json
petafi-solana-js/: README.md  constants.ts  package.json  tsconfig.json
petafi-solana-js/artifacts/: index.ts  peta_fi_sol_smartcontract.json  peta_fi_sol_smartcontract.ts
petafi-solana-js/errors/: index.ts
petafi-solana-js/instructions/: claim.ts  close_finished_trade.ts  close_payment_receipt.ts  deposit.ts  helpers.ts  index.ts  (+8 more)
programs/optimex-sol-smartcontract/: Cargo.toml
programs/optimex-sol-smartcontract/src/: error.rs  lib.rs  utils.rs
programs/optimex-sol-smartcontract/src/instructions/: claim.rs  close_finished_trade.rs  close_payment_receipt.rs  deposit.rs  mod.rs  payment.rs  set_total_fee.rs  settlement.rs  withdraw_total_fee.rs
programs/optimex-sol-smartcontract/src/instructions/admin_and_operator/: add_fee_receiver.rs  add_or_remove_operator.rs  add_or_update_whitelist.rs  init.rs  remove_fee_receiver.rs  remove_whitelist.rs  set_close_wait_duration.rs
programs/optimex-sol-smartcontract/src/state/: config.rs  fee_receiver.rs  mod.rs  nonce_check_account.rs  payment_receipt.rs  vault.rs  whitelist_token.rs
solana-js/: README.md  constants.ts  index.ts  package.json
tests/: admin-manage.test.ts  bitfi_test.ts  claim.test.ts  closeFinishedTrade.test.ts  deposit.test.ts  example-data.ts  optimex_success.test.ts  payment.test.ts  petafi_success.test.ts  setTotalFee.test.ts  settlement.test.ts  utils.ts  verify_presign.test.ts  withdrawTotalFee.test.ts
(+86 files in other folders)
